test/tests/operators/to_splunk_validation/error_buffer_timeout_zero.txt
error: `buffer_timeout` must be positive
 --> tests/operators/to_splunk_validation/error_buffer_timeout_zero.tql:7:26
  |
7 |           buffer_timeout=0s
  |                          ^^ 
  |
